--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,47 @@
 <resources>
-    <string name="app_name">SimpleAccounting</string>
-    <string name="title_activity_log_in">LogIn</string>
+    <string name="title_activity_log_in">Login</string>
+    <string name="login">LogIn</string>
+    <string name="register">Register</string>
     <string name="title_activity_home">HomeActivity</string>
+    <string name="app_name">Simple Accounting</string>
+    <string name="welcome_message">Welcome to the Home Screen!</string>
+    <string name="logged_in_as">Logged in as:</string>
+    <string name="user_id">User ID:</string>
+    <string name="date">Date:</string>
+    <string name="previous_day">Previous Day</string>
+    <string name="select_date">Select Date</string>
+    <string name="next_day">Next Day</string>
+    <string name="enter_amount">Enter Amount</string>
+    <string name="description">Description</string>
+    <string name="income">Income</string>
+    <string name="expense">Expense</string>
+    <string name="add_record">Add Record</string>
+    <string name="view_income_expense">View Income/Expense</string>
+    <string name="records">Records:</string>
+    <string name="total_profit">Total Profit:</string>
+    <string name="logout">Logout</string>
+    <string name="visualize">Visualize Income/Expense</string>
+    <string name="delete">Delete</string>
+    <string name="monthly_summary">Monthly Summary</string>
+    <string name="total_income">Total Income:</string>
+    <string name="total_expense">Total Expense:</string>
+    <string name="net_income">Net Income:</string>
+    <string name="confirm">Confirm</string>
+    <string name="failed_to_fetch_user_id">Fail to Fetch User ID</string>
+    <string name="no_email">No Email Available</string>
+    <string name="type">Income / Expense</string>
+    <string name="amount">amount</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="login_successful">Login Successful</string>
+    <string name="login_failed">Login Failed</string>
+    <string name="switch_to_register">Switch to Register</string>
+    <string name="switch_to_login">Switch to Login</string>
+    <string name="registration_successful">Registration successful</string>
+    <string name="save_user_data_failed">Failed to save user data</string>
+    <string name="registration_failed">Registration failed</string>
+    <string name="user_id_exists">User ID already exists. Please choose a different one.</string>
+    <string name="error_checking_user_id">Error checking User ID</string>
+    <string name="passwords_do_not_match">Passwords do not match</string>
 </resources>
