--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_activity_home">HomeActivity</string>
     <string name="app_name">簡單記帳本</string>
     <string name="welcome_message">歡迎來到主畫面!</string>
-    <string name="logged_in_as">登入帳號:</string>
+    <string name="logged_in_as">登入帳號: %1$s</string>
     <string name="user_id">用戶ID:</string>
     <string name="date">日期:</string>
     <string name="previous_day">前一天</string>
@@ -18,14 +18,14 @@
     <string name="add_record">新增資料</string>
     <string name="view_income_expense">查看支出收入</string>
     <string name="records">紀錄:</string>
-    <string name="total_profit">總盈餘:</string>
+    <string name="total_profit">總盈餘: %1$d</string>
     <string name="logout">登出</string>
     <string name="visualize">圖表分析</string>
     <string name="delete">刪除</string>
     <string name="monthly_summary">月收入支出總覽</string>
-    <string name="total_income">總收入:</string>
-    <string name="total_expense">總支出:</string>
-    <string name="net_income">淨收入:</string>
+    <string name="total_income">總收入: %1$d</string>
+    <string name="total_expense">總支出: %1$d</string>
+    <string name="net_income">淨收入: %1$d</string>
     <string name="confirm">確定</string>
     <string name="failed_to_fetch_user_id">讀取用戶ID失敗</string>
     <string name="no_email">沒有可用的Email</string>
